[package]
name = "WB_L0"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["tokio", "http1"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.89"
